# PhantomEngine

./: .gitignore  .gitmodules  README.md
PhantomEngine/: CMakeLists.txt  build_freetype2.bat  build_freetype2.sh  build_imglib.bat  build_imglib.sh  build_opengex.bat  build_opengex.sh  cbuild.bat  cbuild.sh  config.h  config.h.in  projectConfig.h  projectConfig.h.in
PhantomEngine/Assets/Assets/Resources/Scene/: anim.OGEX  c8.OGEX  hierachy.OGEX  my.OGEX
PhantomEngine/Assets/Assets/Resources/shaders/: GfxStruct.glsl  frag.shader  frag_light.shader  shadowMap_frag.shader  shadowMap_vert.shader  skybox_vert.shader  vert_light.shader
PhantomEngine/Assets/Assets/Resources/shaders/Metal/: GfxStructMetal.h  base.metal  (+2 more)
PhantomEngine/Dependencies/: README.txt
PhantomEngine/Dependencies/Darwin/lib/pkgconfig/: freetype2.pc
PhantomEngine/Dependencies/Windows/include/: ODDLTypes.h  OpenDDL.h  OpenGEX.h
PhantomEngine/Dependencies/Windows/lib/: OpenDDL.lib  OpenGEX.lib  freetyped.lib  jpeg.lib
PhantomEngine/Dependencies/src/: Readme.txt
PhantomEngine/Dependencies/src/glad/: glad_generate.bat
PhantomEngine/Dependencies/src/glad/src/: glad.c  glad_glx.c  glad_wgl.c
PhantomEngine/Dependencies/src/libjpeg/: CMakeLists.txt
PhantomEngine/Game/: CMakeLists.txt
PhantomEngine/Game/Dota3DOpengl/: CMakeLists.txt  DefaultGame.cpp  MacOpenGLApplicationConfig.cpp  WindowsOpenGLApplicationConfig.cpp
PhantomEngine/Game/Dota3DWindows/: CMakeLists.txt  DefaultGame.cpp  WindowsApplicationConfig.cpp
PhantomEngine/Game/DotaAwc/: CMakeLists.txt  DefaultGame.cpp
PhantomEngine/Game/test/: CMakeLists.txt  OgexParserTest.cpp
PhantomEngine/Game/zjpeg/: CMakeLists.txt  main.cpp
PhantomEngine/PhantomCore/: CMakeLists.txt  main.cpp
PhantomEngine/PhantomCore/src/: main.cpp  test.cpp
PhantomEngine/PhantomCore/src/ability/: Ability.h  IAnimatable.h
PhantomEngine/PhantomCore/src/common/: AnimationManager.cpp  AnimationManager.h  AssetLoadManager.cpp  AssetLoadManager.h  BaseApplication.cpp  BaseApplication.h  BehaviourManager.cpp  BehaviourManager.h  DebugManager.cpp  DebugManager.h  GfxConfiguration.h  GraphicsManager.cpp  GraphicsManager.h  InputManager.cpp  InputManager.h  Portable.h  Portable.hpp  SceneManager.cpp  SceneManager.h  Singleton.h  TreeNode.h  buffer.h  utility.hpp
PhantomEngine/PhantomCore/src/components/: Classes.cpp  Classes.h  main.cpp_sample
PhantomEngine/PhantomCore/src/eventQueue/: EventManager.cpp  EventManager.h  EventStruct.h  readme.txt
PhantomEngine/PhantomCore/src/graphics/: GIndexBuffer.cpp  GIndexBuffer.h  GVertexArray.cpp  GVertexArray.h  GVertexBuffer.cpp  GVertexBuffer.h  GfxStruct.h  Image.cpp  Image.h  renderable.cpp  renderable.h  renderer.cpp  renderer.h  shader.cpp  shader.h  window.cpp  window.h
PhantomEngine/PhantomCore/src/graphics/gui/: GuiCommon.h
PhantomEngine/PhantomCore/src/graphics/opengl_tmp/: renderable.h  shader.cpp  window.cpp
PhantomEngine/PhantomCore/src/graphics/textCore/: FontEngine.cpp  FontEngine.h
PhantomEngine/PhantomCore/src/interface/: IApplication.h  IInterface.h  IRuntimeModule.h  ImageParser.h  Interface.h  SceneParser.h
PhantomEngine/PhantomCore/src/maths/: AngleUtils.h  PhMaths.h  mat3.cpp  mat3.h  mat4.cpp  mat4.h  maths.h  sort.h  utils.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h  vector.cpp  vector.h
PhantomEngine/PhantomCore/src/maths/algorithm/: Bezier.h  Curve.h  Linear.h  newtonRapson.h
PhantomEngine/PhantomCore/src/parser/: BMPParser.h  JpegParser.h  OpengexParser.cpp  opengexparser.h
PhantomEngine/PhantomCore/src/scene/: BaseSceneObject.cpp  BaseSceneObject.h  Scene.cpp  Scene.h  SceneBaseNode.h  SceneBaseObject.h  SceneGeometryNode.h  SceneHeaders.h  SceneLightNode.h  SceneObjectAnimation.cpp  SceneObjectAnimation.h  SceneObjectGeometry.h  SceneObjectIndexArray .cpp  SceneObjectIndexArray .h  SceneObjectIndexArray.h  SceneObjectLight.h  SceneObjectMaterial.h  SceneObjectMesh.cpp  SceneObjectMesh.h  SceneObjectSkeleton.cpp  SceneObjectSkeleton.h  SceneObjectSkin.cpp  SceneObjectSkin.h  SceneObjectTexture.h  SceneObjectTrack.cpp  SceneObjectTrack.h  SceneObjectTransform.h  SceneObjectVertexArray.cpp  SceneObjectVertexArray.h  SceneOjbectTypeDef.h  TreeNode.h  camera.cpp  camera.h
PhantomEngine/PhantomCore/src/utils/: Timer.h  fileUtils.h  guid.cpp  guid.hpp
PhantomEngine/Platform/: CMakeLists.txt
PhantomEngine/Platform/Darwin/: CMakeLists.txt  CocoaApplication.h  CocoaApplication.mm  CocoaMetalApplication.h  CocoaMetalApplication.mm  CocoaMetalApplicationConfig.cpp  CocoaMetalApplicationConfig.hpp  CocoaOpenGLApplication.h  CocoaOpenGLApplication.mm  CocoaOpenGLApplicationConfig.cpp  GLView.h  GLView.mm  MacApplication.cpp  MetalView.mm  PosixTimer.cpp
PhantomEngine/Platform/Empty/: CMakeLists.txt  DefaultApplication.cpp  DefaultApplication.h  PosixTimer.cpp
PhantomEngine/Platform/Macos/: CMakeLists.txt
PhantomEngine/Platform/Windows/: CMakeLists.txt  OpenGLApplication.cpp  OpenGLApplication.h  PlatformApplication.cpp  PlatformApplication.h  Win32Timer.cpp  WindowsApplication.cpp  WindowsApplication.h  windowsapplication.h
PhantomEngine/RHI/: CMakeLists.txt
PhantomEngine/RHI/D2d/: D2dGraphicsManager.cpp  D2dGraphicsManager.h
PhantomEngine/RHI/D3d/: D3d12GraphicsManager.cpp  D3d12GraphicsManager.h  D3d12GraphicsManager.hpp
PhantomEngine/RHI/Metal/: CMakeLists.txt  Metal2GraphicsManager.h  Metal2GraphicsManager.mm  Metal2Renderer.h  Metal2Renderer.mm  MetalConfig.hpp
PhantomEngine/RHI/OpenGL/: CMakeLists.txt  OpenGLGraphicsManager.cpp  OpenGLGraphicsManager.h  OpenGLShader.cpp  OpenGLShader.h
PhantomEngine/Tests/: CMakeLists.txt
PhantomEngine/Tests/Memory/: CMakeLists.txt  main.cpp
PhantomEngine/Tests/Memory/src/: PhAllocator.cpp  PhAllocator.h
PhantomEngine/Tests/samples/: CMakeLists.txt  main.cpp
PhantomEngine/Tests/samples/src/: main.cpp
PhantomEngine/Tests/samples/src/eventQueue/: EventManager.cpp  EventStruct.h
PhantomEngine/assets/Resources/shaders/: frag_light.shader  vert_light.shader
PhantomEngine/sample/: CMakeLists.txt  main.cpp
(+16 files in other folders)
